# cuda-load-generator

./: CMakeLists.txt  README.md
src/: kernels.cu  main.cpp
